services/basket/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-service
  labels:
    app: basket-service
spec:
  selector:
    matchLabels:
      app: basket-service
  template:
    metadata:
      labels:
        app: basket-service
    spec:
      containers:
        - name: basket-service
          image: floriaaan/basket-service:1.0.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 50002
