services/basket/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basket-service
spec:
  selector:
    app: basket-service
  ports:
    - name: "grpc"
      port: 50002
      targetPort: 50002
status:
  loadBalancer: {}
